test_regress/t/t_param_type_bad3.out
%Error: ../my-verilator-fork/test_regress/t/t_param_type_bad3.v:9:26: Expected data type, not a VARREF 'PI'
                                                                    : ... note: In instance 't'
    9 |    localparam type P_T = PI;
      |                          ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=5.043 for more assistance.
